syntax = "proto3";

package ZMDev.fate.pb;

service AccessTokenService {
    // 获取 access token
    rpc Token (Credential) returns (AccessToken) {
    }
}

service AppService {
    rpc List (AppListReq) returns (AppList) {
    }
    rpc Find (AppID) returns (Application) {
    }
    rpc Create (Application) returns (Application) {
    }
    rpc Update (Application) returns (Unused) {
    }
    rpc Delete (AppID) returns (Unused) {
    }
}

service CertificateService {
    rpc Update (Certificate) returns (Unused) {
    }
}

service LoginChecker {
    rpc check (TicketID) returns (LoginCheckRes) {
    }
}

service UserService {
    //todo update password
    rpc UpdatePassword (UserID) returns (Unused) {
    }
}

message UserID {
    int64 id = 1;
}

message TicketID {
    string id = 1;
}

//enum LoginState {
//    LoggedIn = 0;
//    NotLoggedIn = 1;
//}

message LoginCheckRes {
    bool is_login = 1;
}

message Unused {
}

message Credential {
    int32 app_id = 1;
    string app_secret = 2;
}

message AccessToken {
    string token = 1;
    int64 expired_at = 2;
}

message Application {
    int32 id = 1;
    string logo_hash = 2;
    int64 user_id = 3;
    string secret = 4;
    string url = 5;
    string name = 6;
    string description = 7;
    string redirect_url = 8;
    bool revoked = 9;
    int64 created_at = 10;
    int64 updated_at = 11;
    int64 deleted_at = 12;
}

message AppID {
    int32 id = 1;
}

message AppListReq {
    UserID user_id = 1;
    int32 per_page = 2;
    int32 page = 3;
}

message AppList {
    repeated Application apps = 1;
}

enum CertificateType {
    StudentNum = 0;
}

message Certificate {
    int64 id = 1;
    int64 user_id = 2;
    string account = 3;
    CertificateType certificate_type = 4;
}
